将test里的文件都换成jupyter notebook。

--- a/test/truncated_laplace.ipynb
+++ b/test/truncated_laplace.ipynb
@@ -26,6 +26,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pdra import TruncatedLaplace\n",
@@ -41,8 +42,6 @@
     "tl = TruncatedLaplace(low, high, loc, scale)\n",
     "\n",
     "samples = tl.sample(n_samples)\n",
-    "\n",
-    "figure_path = \"figures/truncated_laplace/\"\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
