添加文档内容。

--- a/test/distributed_qp.ipynb
+++ b/test/distributed_qp.ipynb
@@ -5,7 +5,9 @@
    "id": "eba0be98",
    "metadata": {},
    "source": [
-    "# Private Distributed Resource Allocation Numerical Experiment Code"
+    "# Private Distributed Resource Allocation Numerical Experiment Code\n",
+    "\n",
+    "Install package [pdra](https://github.com/rui-huang-opt/pdra) first before running this script."
    ]
   },
   {
