--- a/test/truncated_laplace.ipynb
+++ b/test/truncated_laplace.ipynb
@@ -5,7 +5,9 @@
    "id": "19f488c1",
    "metadata": {},
    "source": [
-    "# Test for truncated Laplace noise"
+    "# Test for truncated Laplace noise\n",
+    "\n",
+    "Install package [pdra](https://github.com/rui-huang-opt/pdra) first before running this script."
    ]
   },
   {
