将实验脚本换成jupyter notebook。

--- a/exp/distributed_qp.ipynb
+++ b/exp/distributed_qp.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b44bc4c2",
    "metadata": {},
    "outputs": [
@@ -23,16 +23,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting git+https://github.com/rui-huang-opt/pdra.git\n",
-      "  Cloning https://github.com/rui-huang-opt/pdra.git to /tmp/pip-req-build-bu76zjxo\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/rui-huang-opt/pdra.git /tmp/pip-req-build-bu76zjxo\n",
-      "  Resolved https://github.com/rui-huang-opt/pdra.git to commit 1827118fa4a1637727d1249f74faeb397be35be1\n",
-      "  Installing build dependencies ... \u001b[?25l-"
+      "Collecting pdra@ git+https://github.com/rui-huang-opt/pdra.git\n",
+      "  Cloning https://github.com/rui-huang-opt/pdra.git to /tmp/pip-install-ej7c5cnf/pdra_8869fcff80554611a94d9f75811e7ae9\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/rui-huang-opt/pdra.git /tmp/pip-install-ej7c5cnf/pdra_8869fcff80554611a94d9f75811e7ae9\n",
+      "  Resolved https://github.com/rui-huang-opt/pdra.git to commit 5110dc1750e2c478b7b8a7ee6ffa8255492391e2\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[48 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m configuration error: `project.dependencies[0]` must be pep508\n",
+      "  \u001b[31m   \u001b[0m DESCRIPTION:\n",
+      "  \u001b[31m   \u001b[0m     Project dependency specification according to PEP 508\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m GIVEN VALUE:\n",
+      "  \u001b[31m   \u001b[0m     \"cvxpy>=1.4.3[GLPK]\"\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m OFFENDING RULE: 'format'\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m DEFINITION:\n",
+      "  \u001b[31m   \u001b[0m     {\n",
+      "  \u001b[31m   \u001b[0m         \"$id\": \"#/definitions/dependency\",\n",
+      "  \u001b[31m   \u001b[0m         \"title\": \"Dependency\",\n",
+      "  \u001b[31m   \u001b[0m         \"type\": \"string\",\n",
+      "  \u001b[31m   \u001b[0m         \"format\": \"pep508\"\n",
+      "  \u001b[31m   \u001b[0m     }\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m For more details about `format` see\n",
+      "  \u001b[31m   \u001b[0m https://validate-pyproject.readthedocs.io/en/latest/api/validate_pyproject.formats.html\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 389, in <module>\n",
+      "  \u001b[31m   \u001b[0m     main()\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 373, in main\n",
+      "  \u001b[31m   \u001b[0m     json_out[\"return_val\"] = hook(**hook_input[\"kwargs\"])\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 143, in get_requires_for_build_wheel\n",
+      "  \u001b[31m   \u001b[0m     return hook(config_settings)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 331, in get_requires_for_build_wheel\n",
+      "  \u001b[31m   \u001b[0m     return self._get_build_requires(config_settings, requirements=[])\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 301, in _get_build_requires\n",
+      "  \u001b[31m   \u001b[0m     self.run_setup()\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 317, in run_setup\n",
+      "  \u001b[31m   \u001b[0m     exec(code, locals())\n",
+      "  \u001b[31m   \u001b[0m   File \"<string>\", line 1, in <module>\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/__init__.py\", line 115, in setup\n",
+      "  \u001b[31m   \u001b[0m     return distutils.core.setup(**attrs)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/_distutils/core.py\", line 160, in setup\n",
+      "  \u001b[31m   \u001b[0m     dist.parse_config_files()\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/dist.py\", line 756, in parse_config_files\n",
+      "  \u001b[31m   \u001b[0m     pyprojecttoml.apply_configuration(self, filename, ignore_option_errors)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 72, in apply_configuration\n",
+      "  \u001b[31m   \u001b[0m     config = read_configuration(filepath, True, ignore_option_errors, dist)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 140, in read_configuration\n",
+      "  \u001b[31m   \u001b[0m     validate(subset, filepath)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-38ncwsps/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 61, in validate\n",
+      "  \u001b[31m   \u001b[0m     raise ValueError(f\"{error}\\n{summary}\") from None\n",
+      "  \u001b[31m   \u001b[0m ValueError: invalid pyproject.toml config: `project.dependencies[0]`.\n",
+      "  \u001b[31m   \u001b[0m configuration error: `project.dependencies[0]` must be pep508\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
+      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install git+https://github.com/rui-huang-opt/pdra.git"
+    "%pip install \"pdra @ git+https://github.com/rui-huang-opt/pdra.git\""
    ]
   },
   {
