--- a/exp/co_production.ipynb
+++ b/exp/co_production.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "782f19c0",
    "metadata": {},
    "outputs": [
@@ -24,31 +24,74 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/rui-huang-opt/pdra.git\n",
-      "  Cloning https://github.com/rui-huang-opt/pdra.git to /tmp/pip-req-build-1enom5gj\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/rui-huang-opt/pdra.git /tmp/pip-req-build-1enom5gj\n",
-      "  Resolved https://github.com/rui-huang-opt/pdra.git to commit 1827118fa4a1637727d1249f74faeb397be35be1\n",
+      "  Cloning https://github.com/rui-huang-opt/pdra.git to /tmp/pip-req-build-k_thob9v\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/rui-huang-opt/pdra.git /tmp/pip-req-build-k_thob9v\n",
+      "  Resolved https://github.com/rui-huang-opt/pdra.git to commit 5110dc1750e2c478b7b8a7ee6ffa8255492391e2\n",
       "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: cvxpy>=1.4.3 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from pdra==0.1.0) (1.6.6)\n",
-      "Collecting gossip@ git+https://github.com/rui-huang-opt/gossip.git (from pdra==0.1.0)\n",
-      "  Cloning https://github.com/rui-huang-opt/gossip.git to /tmp/pip-install-d21o7po4/gossip_d419f0b1a67f44ee9d5c9ee16a813e6a\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/rui-huang-opt/gossip.git /tmp/pip-install-d21o7po4/gossip_d419f0b1a67f44ee9d5c9ee16a813e6a\n",
-      "  Resolved https://github.com/rui-huang-opt/gossip.git to commit cc26e514d3b2c0e0a710e449d39455825077cba2\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: osqp>=0.6.2 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cvxpy>=1.4.3->pdra==0.1.0) (1.0.4)\n",
-      "Requirement already satisfied: clarabel>=0.5.0 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cvxpy>=1.4.3->pdra==0.1.0) (0.11.1)\n",
-      "Requirement already satisfied: scs>=3.2.4.post1 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cvxpy>=1.4.3->pdra==0.1.0) (3.2.7.post2)\n",
-      "Requirement already satisfied: numpy>=1.21.6 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cvxpy>=1.4.3->pdra==0.1.0) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.11.0 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cvxpy>=1.4.3->pdra==0.1.0) (1.15.3)\n",
-      "Requirement already satisfied: cffi in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from clarabel>=0.5.0->cvxpy>=1.4.3->pdra==0.1.0) (1.17.1)\n",
-      "Requirement already satisfied: jinja2 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from osqp>=0.6.2->cvxpy>=1.4.3->pdra==0.1.0) (3.1.6)\n",
-      "Requirement already satisfied: setuptools in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from osqp>=0.6.2->cvxpy>=1.4.3->pdra==0.1.0) (80.9.0)\n",
-      "Requirement already satisfied: joblib in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from osqp>=0.6.2->cvxpy>=1.4.3->pdra==0.1.0) (1.5.1)\n",
-      "Requirement already satisfied: pycparser in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from cffi->clarabel>=0.5.0->cvxpy>=1.4.3->pdra==0.1.0) (2.22)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages (from jinja2->osqp>=0.6.2->cvxpy>=1.4.3->pdra==0.1.0) (3.0.2)\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[48 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m configuration error: `project.dependencies[0]` must be pep508\n",
+      "  \u001b[31m   \u001b[0m DESCRIPTION:\n",
+      "  \u001b[31m   \u001b[0m     Project dependency specification according to PEP 508\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m GIVEN VALUE:\n",
+      "  \u001b[31m   \u001b[0m     \"cvxpy>=1.4.3[GLPK]\"\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m OFFENDING RULE: 'format'\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m DEFINITION:\n",
+      "  \u001b[31m   \u001b[0m     {\n",
+      "  \u001b[31m   \u001b[0m         \"$id\": \"#/definitions/dependency\",\n",
+      "  \u001b[31m   \u001b[0m         \"title\": \"Dependency\",\n",
+      "  \u001b[31m   \u001b[0m         \"type\": \"string\",\n",
+      "  \u001b[31m   \u001b[0m         \"format\": \"pep508\"\n",
+      "  \u001b[31m   \u001b[0m     }\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m For more details about `format` see\n",
+      "  \u001b[31m   \u001b[0m https://validate-pyproject.readthedocs.io/en/latest/api/validate_pyproject.formats.html\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 389, in <module>\n",
+      "  \u001b[31m   \u001b[0m     main()\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 373, in main\n",
+      "  \u001b[31m   \u001b[0m     json_out[\"return_val\"] = hook(**hook_input[\"kwargs\"])\n",
+      "  \u001b[31m   \u001b[0m   File \"/home/rui/python_projects/pdra/.venv/lib/python3.10/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 143, in get_requires_for_build_wheel\n",
+      "  \u001b[31m   \u001b[0m     return hook(config_settings)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 331, in get_requires_for_build_wheel\n",
+      "  \u001b[31m   \u001b[0m     return self._get_build_requires(config_settings, requirements=[])\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 301, in _get_build_requires\n",
+      "  \u001b[31m   \u001b[0m     self.run_setup()\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/build_meta.py\", line 317, in run_setup\n",
+      "  \u001b[31m   \u001b[0m     exec(code, locals())\n",
+      "  \u001b[31m   \u001b[0m   File \"<string>\", line 1, in <module>\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/__init__.py\", line 115, in setup\n",
+      "  \u001b[31m   \u001b[0m     return distutils.core.setup(**attrs)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/_distutils/core.py\", line 160, in setup\n",
+      "  \u001b[31m   \u001b[0m     dist.parse_config_files()\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/dist.py\", line 756, in parse_config_files\n",
+      "  \u001b[31m   \u001b[0m     pyprojecttoml.apply_configuration(self, filename, ignore_option_errors)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 72, in apply_configuration\n",
+      "  \u001b[31m   \u001b[0m     config = read_configuration(filepath, True, ignore_option_errors, dist)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 140, in read_configuration\n",
+      "  \u001b[31m   \u001b[0m     validate(subset, filepath)\n",
+      "  \u001b[31m   \u001b[0m   File \"/tmp/pip-build-env-2e891zn6/overlay/lib/python3.10/site-packages/setuptools/config/pyprojecttoml.py\", line 61, in validate\n",
+      "  \u001b[31m   \u001b[0m     raise ValueError(f\"{error}\\n{summary}\") from None\n",
+      "  \u001b[31m   \u001b[0m ValueError: invalid pyproject.toml config: `project.dependencies[0]`.\n",
+      "  \u001b[31m   \u001b[0m configuration error: `project.dependencies[0]` must be pep508\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
+      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
