在测试脚本前添加安装本package的命令。

--- a/test/distributed_qp.ipynb
+++ b/test/distributed_qp.ipynb
@@ -7,7 +7,17 @@
    "source": [
     "# Private Distributed Resource Allocation Numerical Experiment Code\n",
     "\n",
-    "Install package [pdra](https://github.com/rui-huang-opt/pdra) first before running this script."
+    "Install package **pdra** before running this script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be9c41d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install \"pdra[exp] @ git+https://github.com/rui-huang-opt/pdra.git\""
    ]
   },
   {
