--- a/test/truncated_laplace.ipynb
+++ b/test/truncated_laplace.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b30f6646",
    "metadata": {},
    "outputs": [
@@ -32,13 +32,13 @@
     "import matplotlib.pyplot as plt\n",
     "from pdra import TruncatedLaplace\n",
     "\n",
-    "low = -2          # Lower bound of the distribution.\n",
-    "high = 1          # Upper bound of the distribution.\n",
-    "loc = 0           # Location parameter of the distribution.\n",
-    "scale = 1         # Scale parameter of the distribution.\n",
-    "n_samples = 50000 # Number of samples to draw.\n",
-    "n_bins = 50       # Number of bins to plot histogram.\n",
-    "n_points = 1000   # Number of points to plot pdf.\n",
+    "low = -2\n",
+    "high = 1\n",
+    "loc = 0\n",
+    "scale = 1\n",
+    "n_samples = 50000\n",
+    "n_bins = 50\n",
+    "n_points = 1000\n",
     "\n",
     "tl = TruncatedLaplace(low, high, loc, scale)\n",
     "\n",
