将这个包的通信依赖改为新的topolink包。

--- a/exp/licq_illustration/main.ipynb
+++ b/exp/licq_illustration/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6e3e5d7f",
    "metadata": {},
    "outputs": [
@@ -239,15 +239,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "359bb490",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "root_dir = os.path.dirname(os.path.dirname(os.getcwd()))\n",
-    "figure_dir = os.path.join(root_dir, \"figures\", \"licq\")\n",
+    "script_dir = os.getcwd()\n",
+    "figure_dir = os.path.join(script_dir, \"figures\")\n",
     "os.makedirs(figure_dir, exist_ok=True)\n",
     "\n",
     "fig1.savefig(os.path.join(figure_dir, \"licq_illustration_1.pdf\"), bbox_inches=\"tight\")\n",
