--- a/tests/distributed_qp/server.ipynb
+++ b/tests/distributed_qp/server.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3bb932f0",
+   "metadata": {},
+   "source": [
+    "# Distributed Quadratic Programming Test Graph Server\n",
+    "\n",
+    "## 1. Server Setup for Deploying Distributed Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bdd704ea",
@@ -43,6 +53,14 @@
     "\n",
     "\n",
     "server()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeac0c29",
+   "metadata": {},
+   "source": [
+    "## 2. Network Topology Visualization"
    ]
   },
   {
