--- a/tests/truncated_laplace/truncated_laplace.ipynb
+++ b/tests/truncated_laplace/truncated_laplace.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b30f6646",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     "\n",
     "ax.hist(samples, bins=n_bins, density=True)\n",
     "\n",
-    "x = np.linspace(low, high, n_points)\n",
+    "x = np.linspace(low, high, n_points, dtype=np.float64)\n",
     "\n",
     "ax.plot(x, tl.pdf(x), \"r\", lw=2)\n",
     "\n",
