重新调整代码结构，适配新的topolink通信包，计划不把算法封装成一个进程，改成一个普通的类。

--- a/exp/distributed_qp/server.ipynb
+++ b/exp/distributed_qp/server.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "007d4aa2",
    "metadata": {},
    "outputs": [
@@ -42,27 +42,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Server running on localhost:5555\n",
-      "INFO:root:Node 1 registered with address 10.20.107.251:54947\n",
-      "INFO:root:Node 2 registered with address 10.20.107.251:55917\n",
-      "INFO:root:Node 3 registered with address 10.20.107.251:54857\n",
-      "INFO:root:Node 4 registered with address 10.20.107.251:55103\n",
-      "INFO:root:Node 6 registered with address 10.20.107.251:54225\n",
-      "INFO:root:Node 7 registered with address 10.20.107.251:54377\n",
-      "INFO:root:Node 9 registered with address 10.20.107.251:55349\n",
-      "INFO:root:Node 8 registered with address 10.20.107.251:55133\n",
-      "INFO:root:Node 5 registered with address 10.20.107.251:54287\n",
-      "INFO:root:All nodes registered. Server is now ready.\n",
-      "INFO:root:Sent neighbor addresses to all nodes.\n",
-      "INFO:root:Node 6 has unregistered.\n",
-      "INFO:root:Node 5 has unregistered.\n",
-      "INFO:root:Node 8 has unregistered.\n",
-      "INFO:root:Node 4 has unregistered.\n",
-      "INFO:root:Node 2 has unregistered.\n",
-      "INFO:root:Node 1 has unregistered.\n",
-      "INFO:root:Node 7 has unregistered.\n",
-      "INFO:root:Node 3 has unregistered.\n",
-      "INFO:root:Node 9 has unregistered.\n"
+      "INFO:topolink.Graph:Registry running on 172.26.120.171:42381\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m     graph \u001b[38;5;241m=\u001b[39m Graph(node_names, edge_pairs)\n\u001b[1;32m      9\u001b[0m     graph\u001b[38;5;241m.\u001b[39mdeploy()\n\u001b[0;32m---> 12\u001b[0m \u001b[43mserver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mI\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mE\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m, in \u001b[0;36mserver\u001b[0;34m(node_names, edge_pairs)\u001b[0m\n\u001b[1;32m      4\u001b[0m basicConfig(level\u001b[38;5;241m=\u001b[39mINFO)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtopolink\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Graph\n\u001b[0;32m----> 8\u001b[0m graph \u001b[38;5;241m=\u001b[39m \u001b[43mGraph\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode_names\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medge_pairs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m graph\u001b[38;5;241m.\u001b[39mdeploy()\n",
+      "File \u001b[0;32m~/code/pdra/.venv/lib/python3.10/site-packages/topolink/graph.py:92\u001b[0m, in \u001b[0;36mGraph.__init__\u001b[0;34m(self, nodes, edges, *args, **kwargs)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_host \u001b[38;5;241m=\u001b[39m get_local_ip()\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_router, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_port \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setup_router()\n\u001b[0;32m---> 92\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_registry_advertiser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mregister\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_host\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_port\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_registered_addresses: \u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m {}\n",
+      "File \u001b[0;32m~/code/pdra/.venv/lib/python3.10/site-packages/topolink/discovery.py:26\u001b[0m, in \u001b[0;36mRegistryAdvertiser.register\u001b[0;34m(self, ip_addr, port)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mregister\u001b[39m(\u001b[38;5;28mself\u001b[39m, ip_addr: \u001b[38;5;28mstr\u001b[39m, port: \u001b[38;5;28mint\u001b[39m):\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service_info \u001b[38;5;241m=\u001b[39m ServiceInfo(\n\u001b[1;32m     15\u001b[0m         SERVICE_TYPE,\n\u001b[1;32m     16\u001b[0m         SERVICE_NAME,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     24\u001b[0m         server\u001b[38;5;241m=\u001b[39msocket\u001b[38;5;241m.\u001b[39mgethostname() \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.local.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m     )\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_zeroconf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mregister_service\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_service_info\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/code/pdra/.venv/lib/python3.10/site-packages/zeroconf/_core.py:332\u001b[0m, in \u001b[0;36mZeroconf.register_service\u001b[0;34m(self, info, ttl, allow_name_change, cooperating_responders, strict)\u001b[0m\n\u001b[1;32m    320\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Registers service information to the network with a default TTL.\u001b[39;00m\n\u001b[1;32m    321\u001b[0m \u001b[38;5;124;03mZeroconf will then respond to requests for information for that\u001b[39;00m\n\u001b[1;32m    322\u001b[0m \u001b[38;5;124;03mservice.  The name of the service may be changed if needed to make\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    329\u001b[0m \u001b[38;5;124;03mcall to `register_service` cannot be completed.\u001b[39;00m\n\u001b[1;32m    330\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 332\u001b[0m \u001b[43mrun_coro_with_timeout\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    333\u001b[0m \u001b[43m    \u001b[49m\u001b[43mawait_awaitable\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    334\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masync_register_service\u001b[49m\u001b[43m(\u001b[49m\u001b[43minfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mttl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mallow_name_change\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcooperating_responders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    335\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    336\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloop\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    337\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_REGISTER_TIME\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m_REGISTER_BROADCASTS\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    338\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/code/pdra/.venv/lib/python3.10/site-packages/zeroconf/_utils/asyncio.py:117\u001b[0m, in \u001b[0;36mrun_coro_with_timeout\u001b[0;34m(aw, loop, timeout)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Run a coroutine with a timeout.\u001b[39;00m\n\u001b[1;32m    107\u001b[0m \n\u001b[1;32m    108\u001b[0m \u001b[38;5;124;03mThe timeout should only be used as a safeguard to prevent\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;124;03mlonger to complete than the timeout.\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 117\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43masyncio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_coroutine_threadsafe\u001b[49m\u001b[43m(\u001b[49m\u001b[43maw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloop\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    118\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmillis_to_seconds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m_LOADED_SYSTEM_TIMEOUT\u001b[49m\n\u001b[1;32m    119\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    120\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m concurrent\u001b[38;5;241m.\u001b[39mfutures\u001b[38;5;241m.\u001b[39mTimeoutError \u001b[38;5;28;01mas\u001b[39;00m ex:\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m EventLoopBlocked \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mex\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/concurrent/futures/_base.py:453\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    450\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[1;32m    451\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__get_result()\n\u001b[0;32m--> 453\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_condition\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    455\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;129;01min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n\u001b[1;32m    456\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n",
+      "File \u001b[0;32m/usr/lib/python3.10/threading.py:324\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    323\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 324\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    325\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    326\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m waiter\u001b[38;5;241m.\u001b[39macquire(\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -74,7 +72,7 @@
     "\n",
     "    from topolink import Graph\n",
     "\n",
-    "    graph = Graph(node_names, edge_pairs, address=\"localhost:5555\")\n",
+    "    graph = Graph(node_names, edge_pairs)\n",
     "    graph.deploy()\n",
     "\n",
     "\n",
