--- a/tests/truncated_laplace/truncated_laplace.ipynb
+++ b/tests/truncated_laplace/truncated_laplace.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Test for truncated Laplace noise\n",
     "\n",
-    "Install package [pdra](https://github.com/rui-huang-opt/pdra) first before running this script."
+    "Install package [pdra](https://github.com/rui-huang-opt/pdra) first before running this notebook."
    ]
   },
   {
