将distributed qp notebook里少写的论文名加上。

--- a/examples/distributed_qp/main.ipynb
+++ b/examples/distributed_qp/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Distributed quadratic programming\n",
     "\n",
-    "This is the script for the numerical experiment in the paper ...\n",
+    "This notebook presents the numerical experiments for the paper [*Private Distributed Resource Allocation Without Constraint Violations*](https://ieeexplore.ieee.org/abstract/document/11120444).\n",
     "\n",
     "## Communication topology"
    ]
