给分布式二次规划notebook里的rsdd进程node里添加了data的类型注解。

--- a/examples/distributed_qp/main.ipynb
+++ b/examples/distributed_qp/main.ipynb
@@ -379,7 +379,7 @@
     "    import numpy as np\n",
     "\n",
     "    data_dir = pathlib.Path.cwd() / \"data\"\n",
-    "    data = np.load(data_dir / f\"node_{node_idx}.npz\")\n",
+    "    data: dict[str, NDArray[np.float64]] = np.load(data_dir / f\"node_{node_idx}.npz\")\n",
     "\n",
     "    q_i = data[\"Q\"]\n",
     "    g_i = data[\"g\"]\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "088f2296",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
     "            i: pool.apply_async(safe_dra, args=(i, safe_dra_b if i == \"1\" else None))\n",
     "            for i in NODES\n",
     "        }\n",
-    "        graph_result = pool.apply(graph, args=(NODES, EDGES))\n",
+    "        pool.apply(graph, args=(NODES, EDGES))\n",
     "\n",
     "        safe_dra_data = {i: res.get() for i, res in safe_dra_results.items()}"
    ]
